--- a/assets/css/custom-css/subscriberVerificationPage3.css
+++ b/assets/css/custom-css/subscriberVerificationPage3.css
@@ -355,7 +355,6 @@ aside {
 
   & .main-header {
     padding-top: 20px;
-    /* padding-inline-end: 30px; */
     display: flex;
     flex-direction: column;
     text-align: end;
@@ -371,6 +370,14 @@ aside {
 
   .main-container::-webkit-scrollbar {
     width: 2px;
+  }
+
+  #current-details {
+    background-color: inherit;
+    /* padding: 5px; */
+    /* line-height: 1.5; */
+    /* margin-top: -5px; */
+    /* height: 100px; */
   }
 
   textarea::-webkit-scrollbar {
@@ -413,7 +420,7 @@ aside {
           color: var(--black);
           font-size: 12px;
           font-weight: 500;
-          margin-block-end: 3px;
+          /* margin-block-end: 3px; */
         }
         & input {
           height: 30px;
